--- a/application.properties
+++ b/application.properties
@@ -1,2 +1,2 @@
 e.a=alo
-eureka.client.service-url.defaultZone=http://salah:bla@localhost:8761/eureka
+eureka.client.serviceUrl.defaultZone: http://salah:bla@localhost:8761/eureka
