ignore multi exceptions

--- a/application.properties
+++ b/application.properties
@@ -19,9 +19,9 @@ resilience4j.circuitbreaker.configs.shared.max-wait-duration-in-half-open-state=
 resilience4j.circuitbreaker.configs.shared.ring-buffer-size-in-closed-state=5
 resilience4j.circuitbreaker.configs.shared.writable-stack-trace-enabled=true
 resilience4j.circuitbreaker.configs.shared.automatic-transition-from-open-to-half-open-enabled=true
-#resilience4j.circuitbreaker.configs.shared.ignore-exceptions=com.airgap.common.error.custom.EntityNotFoundException
+resilience4j.circuitbreaker.configs.shared.ignore-exceptions=com.airgap.common.error.custom.EntityNotFoundException\
+  ,com.airgap.common.error.custom.UnAuthorizedException
 resilience4j.circuitbreaker.instances.shared.base-config=shared
-
 spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
