--- a/application.properties
+++ b/application.properties
@@ -26,3 +26,8 @@ spring.jpa.properties.hibernate.show_sql=true
 spring.jpa.properties.hibernate.use_sql_comments=true
 spring.jpa.properties.hibernate.format_sql=true
 logging.level.org.hibernate.type=trace
+eureka.client.serviceUrl.defaultZone=http://${spring.security.user.name}:${spring.security.user.password}@localhost:8761/eureka
+# here for testing
+jasypt.encryptor.password=salah
+security.user.name=ENC(BMbogUP5kc6RgxlxT0VEKw==)
+security.user.password=ENC(cReFZN0oof73FRdQbqcH8w==)
