--- a/application.properties
+++ b/application.properties
@@ -31,3 +31,5 @@ eureka.client.serviceUrl.defaultZone=http://${spring.security.user.name}:${sprin
 jasypt.encryptor.password=salah
 security.user.name=ENC(BMbogUP5kc6RgxlxT0VEKw==)
 security.user.password=ENC(cReFZN0oof73FRdQbqcH8w==)
+#Enable all Spring Boot Actuator endpoints.
+management.endpoints.web.exposure.include="*"
