--- a/application.properties
+++ b/application.properties
@@ -33,4 +33,4 @@ security.user.name=ENC(BMbogUP5kc6RgxlxT0VEKw==)
 security.user.password=ENC(cReFZN0oof73FRdQbqcH8w==)
 eureka.instance.hostname=localhost
 #Enable all Spring Boot Actuator endpoints.
-management.endpoints.web.exposure.include="*"
+management.endpoints.web.exposure.include=*
