--- a/api-gateway.yml
+++ b/api-gateway.yml
@@ -9,7 +9,10 @@ spring:
 #      probability: 1.0
 
 
-
+management:
+  endpoint:
+    gateway:
+      enabled: true
 # http://localhost:8765/service-another-micro-dude/service1/feign-bla
 # http://localhost:8765/service-micro-dude-kman/consume-me
 # http://localhost:8765/get
